# chip8-emu

./: CMakeLists.txt  README.md
include/: c8_cpu.h  c8_cpu_local.h  c8_emu.h  c8_inttypes.h  c8_opcodes.h
src/: c8_cpu.c  c8_emu.c  main.c  main_sdl.c
